add song to playlist and remove playlist tests